--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="sticky-footer">
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-md-4 texto_footer">
       <p>Av. Hidalgo S/N esquina con Allende,</p>
       <p>Loma Bonita</p>
