--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="fondo_navbar navbar-expand-lg fixed-top">
-  <div class="container-fluid p-0 m-2">
+<nav class="navbar-expand-lg fixed-top">
+  <div class="container-fluid p-0 m-2 mt-4">
     <div class="row">
-      <div class="col-5">
+      <div class="col-5 d-flex align-items-center">
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item cursor_pointer mx-1">
@@ -29,11 +29,11 @@
       </div>
       <div class="col-2">
         <div class="text-center">
-          <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="50%" height="60%">
+          <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="100%" height="100%">
         </div>
       </div>
       <div class="col-5">
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-end mt-3">
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-face-blanco"></span></a>
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span
                 class="path2"></span><span class="path3"></span></span></a>
